renamed package, remove uppercase characters from package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "audetv/Name",
+  "name": "audetv/name",
   "description": "Personal name object",
   "license": "MIT",
   "author": {"name": "Aleksey Gusev", "homepage": "https://github.com/audetv"},
